discussion/kv_engine/101372/101372_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Revert "MB-30913: Add Scopes to VBucket Filters"

This reverts commit e81d2ffb1ad3fed735a2c0662d4e94d1249b4ff8 - it's causing a number of the server builds to fail (e.g. http://server.jenkins.couchbase.com/job/couchbase-server-unix/126207/) with the following error:

    /home/couchbase/jenkins/workspace/couchbase-server-unix/kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_dcp_test.cc:669:5:   required from here
    /home/couchbase/jenkins/workspace/couchbase-server-unix/googletest/googletest/include/gtest/gtest.h:1392:16: error: no match for ‘operator==’ (operand types are ‘const unsigned char’ and ‘const cb::mcbp::ClientOpcode’)
        if (expected == actual) {
           ~~~~~~~~~^~~~~~~~~

Change-Id: Icd44a1deb8530ddf59bdb5b73fc91ab6cb5eb9a9
Reviewed-on: http://review.couchbase.org/101372
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Dave Rigby <daver@couchbase.com>

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2018-11-05 10:15:46.000000000
Message: 
Change has been successfully cherry-picked as 2d976bb907f5f09b9ce906b4cf5c851388b7a13b by Dave Rigby
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2018-11-05 10:15:54.000000000
Message: 
Patch Set 2:

Build Started http://cv.jenkins.couchbase.com/job/kv-engine-master-post-commit/5384/
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2018-11-05 11:14:34.000000000
Message: 
Patch Set 2:

Build Successful 

http://cv.jenkins.couchbase.com/job/kv-engine-master-post-commit/5384/ : SUCCESS'
----------------------------------------------------------------------------------------------------------------------
